# videoplayer

./: meson.build
src/: main.cpp  meson.build
src/player/: VideoDecoder.cpp  VideoDecoder.hpp  VideoPlayer.cpp  VideoPlayer.hpp
